--- a/src/Components/Tracks/Tracks.module.css
+++ b/src/Components/Tracks/Tracks.module.css
@@ -14,14 +14,14 @@
     padding-top: 10px;
     font-size: small;
   }
-  .container .left #lcard{
+  .container .left .lcard{
     border-radius: 5%;
     padding: 0% 3% 3% 3%;
     width: 100%;
     height: 10vh;
     box-shadow: 0px 2px 5px rgb(0,0,0,0.2);
   }
-  .container .right #lcard{
+  .container .right .lcard{
     border-radius: 5%;
     padding: 0% 3% 3% 3%;
     width: 100%;
