--- a/src/Components/Tracks/Tracks.module.css
+++ b/src/Components/Tracks/Tracks.module.css
@@ -1,7 +1,7 @@
 .header{
     display: flex;
     justify-content: center;
-    font-size: larger;
+    font-size: clamp(12px,10vw,36px);
     color: maroon;
     font-weight: bolder;
   }
@@ -14,18 +14,27 @@
     padding-top: 10px;
     font-size: small;
   }
-  .container .left .lcard{
-    border-radius: 5%;
-    padding: 0% 3% 3% 3%;
-    width: 100%;
+
+  .container .left,.container .right{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .container .left .lcard,.container .right .lcard{
+    font-size:clamp(1rem,4vw,1.3rem);
+    padding-left: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    flex-direction: column;
     height: 10vh;
+    min-height: 7rem;
+    border-radius: 0.5rem;
     box-shadow: 0px 2px 5px rgb(0,0,0,0.2);
   }
-  .container .right .lcard{
-    border-radius: 5%;
-    padding: 0% 3% 3% 3%;
-    width: 100%;
-    height: 10vh;
-    box-shadow: 0px 2px 5px rgb(0,0,0,0.2);
+
+  .container .left .lcard:hover,.container .right .lcard:hover{
+     transform:translate(0.5rem,-0.5rem);
+     box-shadow:-5px 5px  10px slategray ;
   }
   
