--- a/src/Components/Tracks/Tracks.module.css
+++ b/src/Components/Tracks/Tracks.module.css
@@ -12,7 +12,7 @@
     grid-template-rows: 50% auto auto auto;
     gap: 60px;
     padding-top: 10px;
-    font-size: small;
+    font-size:small;
   }
 
   .container .left,.container .right{
@@ -21,7 +21,8 @@
     gap: 1rem;
   }
   .container .left .lcard,.container .right .lcard{
-    font-size:clamp(1rem,4vw,1.3rem);
+    /* font-size:clamp(1rem,4vw,1.3rem); */
+    font-size:large;
     padding-left: 2rem;
     display: flex;
     justify-content: center;
