--- a/src/Components/Tracks/Tracks.module.css
+++ b/src/Components/Tracks/Tracks.module.css
@@ -7,7 +7,7 @@
   }
 .container{
     display: grid;
-    grid-template-columns: 600px 600px;
+    grid-template-columns: 40vw 40vw;
     justify-content: center;
     grid-template-rows: 50% auto auto auto;
     gap: 60px;
@@ -38,3 +38,12 @@
      box-shadow:-5px 5px  10px slategray ;
   }
   
+
+  @media screen and (max-width:768px) {
+    .container{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+    
+  }
