--- a/src/Components/Patrons/patrons.module.scss
+++ b/src/Components/Patrons/patrons.module.scss
@@ -58,7 +58,7 @@ img {
 
 .card__container1{
     display:flex;
-    width: 100vw;
+    // width: 100vw;
     justify-content: center;
     gap: 3.5rem;
   }
@@ -67,7 +67,7 @@ img {
   display:flex;
   justify-content: center;
   gap: 3.5rem;
-  width:100vw;
+  // width:100vw;
 }
 
 .card__article {
