--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -34,6 +34,7 @@
   justify-content: space-between;
   padding-left: 6rem;
   padding-right: 10rem;
+  font-size: 1.1rem;
 }
 
 .pathway-extreme-header-info {
@@ -45,6 +46,7 @@
   font-variation-settings: "wdth" 75;
   line-height: 1.1rem;
   margin-right: 0;
+
 }
 
 .header-location{
