--- a/src/Components/Patrons/patrons.module.scss
+++ b/src/Components/Patrons/patrons.module.scss
@@ -34,6 +34,7 @@
 }
 
 body {
+  position:relative;
   font-family: var(--body-font);
   background-color: var(--body-color);
   color: var(--text-color);
@@ -41,7 +42,7 @@ body {
 
 img {
   display: block;
-  max-width: 100%;
+  
   height: auto;
 }
 
@@ -73,14 +74,20 @@ img {
 .card__article {
   position: relative;
   overflow: hidden;
-  border-radius: 1.5rem;
-  box-shadow: 0px 5px 5px rgb(0,0,0,0.2);
+  border-radius:1.5rem;
+  box-shadow: 0px 5px 5px rgba(55, 53, 53, 0.1);
+  text-align: center;
+  font-weight: bolder;
+  h3{
+    font-size: large;
+    font-weight: 700;
+  }
 }
 
 .card__img {
-  width: 200px;
-  height: 313px;
-  border-radius: 1.5rem;
+ 
+  height: 285px;
+  border-radius: 50%;
   object-fit:fill;
 }
 
@@ -101,7 +108,7 @@ img {
 
 .card__description {
   display: block;
-  font-size: var(--small-font-size);
+  font-size: 1rem;
   margin-bottom: .25rem;
 }
 
@@ -114,66 +121,66 @@ img {
 
 
 
-.card__button:hover {
-  text-decoration: underline;
-}
+// .card__button:hover {
+//   text-decoration: underline;
+// }
 
-/* Naming animations in hover */
-.card__article:hover .card__data {
-  animation: show-data 1s forwards;
-  opacity: 1;
-  transition: opacity .3s;
-}
+// /* Naming animations in hover */
+// .card__article:hover .card__data {
+//   animation: show-data 1s forwards;
+//   opacity: 1;
+//   transition: opacity .3s;
+// }
 
-.card__article:hover {
-  animation: remove-overflow 2s forwards;
-}
+// .card__article:hover {
+//   animation: remove-overflow 2s forwards;
+// }
 
-.card__article:not(:hover) {
-  animation: show-overflow 2s forwards;
-}
+// .card__article:not(:hover) {
+//   animation: show-overflow 2s forwards;
+// }
 
-.card__article:not(:hover) .card__data {
-  animation: remove-data 1s forwards;
-}
+// .card__article:not(:hover) .card__data {
+//   animation: remove-data 1s forwards;
+// }
 
-/* Card animation */
-@keyframes show-data {
-  50% {
-    transform: translateY(-10rem);
-  }
-  100% {
-    transform: translateY(-7rem);
-  }
-}
+// /* Card animation */
+// @keyframes show-data {
+//   50% {
+//     transform: translateY(-10rem);
+//   }
+//   100% {
+//     transform: translateY(-7rem);
+//   }
+// }
 
-@keyframes remove-overflow {
-  to {
-    overflow: initial;
-  }
-}
+// @keyframes remove-overflow {
+//   to {
+//     overflow: initial;
+//   }
+// }
 
-@keyframes remove-data {
-  0% {
-    transform: translateY(-7rem);
-  }
-  50% {
-    transform: translateY(-10rem);
-  }
-  100% {
-    transform: translateY(.5rem);
-  }
-}
+// @keyframes remove-data {
+//   0% {
+//     transform: translateY(-7rem);
+//   }
+//   50% {
+//     transform: translateY(-10rem);
+//   }
+//   100% {
+//     transform: translateY(.5rem);
+//   }
+// }
 
-@keyframes show-overflow {
-  0% {
-    overflow: initial;
-    pointer-events: none;
-  }
-  50% {
-    overflow: hidden;
-  }
-}
+// @keyframes show-overflow {
+//   0% {
+//     overflow: initial;
+//     pointer-events: none;
+//   }
+//   50% {
+//     overflow: hidden;
+//   }
+// }
 
 /*BREAKPOINTS*/
 /* For small devices */
@@ -199,14 +206,14 @@ img {
 /* For large devices */
 @media screen and (min-width: 1120px) {
   .container {
-    height: 100vh;
+    height: 130vh;
   }
 
   .card__container {
-    grid-template-columns: repeat(3, 1fr);
+    justify-content: center;
   }
   .card__img {
-    width: 310px;
+    width: 285px;
   }
   .card__data {
     width: 300px;
