--- a/src/Components/Header/header.module.css
+++ b/src/Components/Header/header.module.css
@@ -42,19 +42,22 @@
   color: blue;
   font-family: "Pathway Extreme", sans-serif;
   font-optical-sizing: auto;
-  font-weight: 950;
+  font-weight: 750;
   font-style: normal;
   font-variation-settings: "wdth" 75;
-  line-height: 1.1rem;
+  line-height: 2.2rem;
   margin-right: 0;
+  font-size: 1.4rem;
 }
 
 .header_location{
   display: flex;
   height: fit-content;
   padding-left: 6rem;
+  padding-top: 0;
   align-items: center;
   background-color: white;
+  padding-bottom: 0rem;
 }
 
 .header_counter{
@@ -72,7 +75,7 @@
   font-weight: 450;
   font-style: normal;
   font-variation-settings: "wdth" 75;
-  line-height: 1.1rem;
+  line-height: 1.8rem;
   padding-left: 0.8rem;
   justify-content: center;
 }
@@ -81,12 +84,13 @@
   color: blue;
   font-family: "Pathway Extreme", sans-serif;
   font-optical-sizing: auto;
-  font-weight: 600;
+  font-weight: 650;
   font-style: normal;
   font-variation-settings: "wdth" 75;
-  line-height: 1.1rem;
+  line-height: 1.8rem;
   padding-left: 0.8rem;
   justify-content: center;
+  font-size: 1rem;
 }
 
 .header_location_data{
@@ -96,10 +100,9 @@
 
 .nits_logo{
   object-fit: contain;
-  padding-top: 1rem;
   img{
-      width: 4rem;
-      height: 4rem;
+      width: 6rem;
+      height: 6rem;
   }
 }
 .location_ieee_silchar_subsection_logo{
