--- a/src/Components/About/AboutUsComponent.module.scss
+++ b/src/Components/About/AboutUsComponent.module.scss
@@ -57,6 +57,7 @@
     color: rgb(53, 49, 49);
     padding-left: 1%;
     padding:1rem 5rem 5rem 5rem;
+    text-justify:distribute;
 }
 
 .sponsorsImg {
