--- a/src/Components/CallForPaper/CallForPaper.module.css
+++ b/src/Components/CallForPaper/CallForPaper.module.css
@@ -1,39 +1,41 @@
-.instructions-heading{
+.instructions_heading{
     color: blue;
     text-align: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bolder;
+    font-size: 2rem;
 }
 
-.instructions-heading span{
+.instructions_heading span{
     color: orange;
 }
 
-.instructions-content{
+.instructions_content{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 1.3rem;
     line-height: 2.5rem;
 }
 
-.submit-digest-text{
+.submit_digest_text{
     color: blue;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 650;
 }
 
-.submission-guidelines-text{
+.submission_guidelines_text{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 1.3rem;
     line-height: 2.5rem;
 }
 
-.submission-guidelines-text p{
+.submission_guidelines_text p{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 1.3rem;
     line-height: 2.5rem;
 }
 
 
-.submission-template button {
+.submission_template button {
   align-items: center;
   appearance: none;
   background-clip: padding-box;
@@ -71,17 +73,17 @@
 }
 
 @media (min-width: 768px) {
-  .submission-template button {
+  .submission_template button {
     padding: 1rem 1.6rem;
   }
 }
 
-.submission-template button:before,
-.submission-template button:after {
+.submission_template button:before,
+.submission_template button:after {
   border-radius: 1.5rem;
 }
 
-.submission-template button:before {
+.submission_template button:before {
   background-color: rgba(249, 58, 19, .32);
   content: "";
   display: block;
@@ -94,7 +96,7 @@
   z-index: -2;
 }
 
-.submission-template button:after {
+.submission_template button:after {
   background-color: initial;
   background-image: linear-gradient(92.83deg, #ff7426 0, #f93a13 100%);
   bottom: 4px;
@@ -109,7 +111,7 @@
   z-index: -1;
 }
 
-.submission-template button:hover:not(:disabled):after {
+.submission_template button:hover:not(:disabled):after {
   bottom: 0;
   left: 0;
   right: 0;
@@ -121,7 +123,7 @@
     color: #ccc;
     } */
 
-.submission-template button:active:not(:disabled):after {
+.submission_template button:active:not(:disabled):after {
   background-image: linear-gradient(0deg, rgba(0, 0, 0, .2), rgba(0, 0, 0, .2)), linear-gradient(92.83deg, #ff7426 0, #f93a13 100%);
   bottom: 4px;
   left: 4px;
@@ -129,7 +131,7 @@
   top: 4px;
 }
 
-.submit-button{
+.submit_button{
     position: absolute;
     color: white;
     background-color: blue;
@@ -142,12 +144,12 @@
     min-width: 4rem;
 }
 
-.submit-button:hover{
+.submit_button:hover{
     background-color: rgb(1, 1, 117);
     transition: 0.5s;
 }
 
-.submit-button:focus {
+.submit_button:focus {
     outline-color: transparent;
     outline-style:solid;
     box-shadow: 0 0 0 4px #05006c;
@@ -157,7 +159,7 @@
 .button:active {
     background-color: rgb(1, 1, 117);
 }
-.submit-button-area{
+.submit_button_area{
     display: flex;
     justify-content: center;
     align-items: center;
