--- a/src/Components/Header/header.module.css
+++ b/src/Components/Header/header.module.css
@@ -31,11 +31,12 @@
 
 .header_content {
   display: flex;
+  gap: 30px;
   align-items: center;
   justify-content: space-between;
   padding-left: 6rem;
   padding-right: 10rem;
-  background-color: white;
+  background-color: #ffffff;
 }
 
 .pathway_extreme_header_info {
@@ -47,16 +48,17 @@
   font-variation-settings: "wdth" 75;
   line-height: 2.2rem;
   margin-right: 0;
-  font-size: 1.4rem;
+  font-size: 2rem;
 }
 
 .header_location{
   display: flex;
+  gap: 140px;
   height: fit-content;
   padding-left: 6rem;
   padding-top: 0;
   align-items: center;
-  background-color: white;
+  background-color: #ffffff;
   padding-bottom: 0rem;
 }
 
@@ -96,6 +98,10 @@
 .header_location_data{
   padding-right: 4rem;
   
+}
+.location{
+  display: flex;
+  flex-direction: row;
 }
 
 .nits_logo{
