--- a/src/Pages/CallForPaper.module.css
+++ b/src/Pages/CallForPaper.module.css
@@ -1,39 +1,45 @@
-.instructions-heading{
+.instructionsHeading{
     color: blue;
     text-align: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 2rem;
+    font-weight: 700;
 }
 
-.instructions-heading span{
+.instructionsHeading span{
     color: orange;
 }
 
-.instructions-content{
+.instructionsContent{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 1.3rem;
     line-height: 2.5rem;
+    padding-left: 3rem;
 }
 
-.submit-digest-text{
+.submitDigestText{
     color: blue;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 650;
 }
 
-.submission-guidelines-text{
+.submissionGuidelinesText{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1.3rem;
+    line-height: 2.5rem;
+    padding-left: 3rem;
+}
+
+.submissionGuidelinesText p{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 1.3rem;
     line-height: 2.5rem;
 }
-
-.submission-guidelines-text p{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 1.3rem;
-    line-height: 2.5rem;
+.submissionGuidelinesTextConditions{
+  padding-left: 1.5rem;
 }
 
-
-.submission-template button {
+.submissionTemplate button {
   align-items: center;
   appearance: none;
   background-clip: padding-box;
@@ -71,17 +77,17 @@
 }
 
 @media (min-width: 768px) {
-  .submission-template button {
+  .submissionTemplate button {
     padding: 1rem 1.6rem;
   }
 }
 
-.submission-template button:before,
-.submission-template button:after {
+.submissionTemplate button:before,
+.submissionTemplate button:after {
   border-radius: 1.5rem;
 }
 
-.submission-template button:before {
+.submissionTemplate button:before {
   background-color: rgba(249, 58, 19, .32);
   content: "";
   display: block;
@@ -94,7 +100,7 @@
   z-index: -2;
 }
 
-.submission-template button:after {
+.submissionTemplate button:after {
   background-color: initial;
   background-image: linear-gradient(92.83deg, #ff7426 0, #f93a13 100%);
   bottom: 4px;
@@ -109,7 +115,7 @@
   z-index: -1;
 }
 
-.submission-template button:hover:not(:disabled):after {
+.submissionTemplate button:hover:not(:disabled):after {
   bottom: 0;
   left: 0;
   right: 0;
@@ -121,7 +127,7 @@
     color: #ccc;
     } */
 
-.submission-template button:active:not(:disabled):after {
+.submissionTemplate button:active:not(:disabled):after {
   background-image: linear-gradient(0deg, rgba(0, 0, 0, .2), rgba(0, 0, 0, .2)), linear-gradient(92.83deg, #ff7426 0, #f93a13 100%);
   bottom: 4px;
   left: 4px;
@@ -129,7 +135,7 @@
   top: 4px;
 }
 
-.submit-button{
+.submitButton{
     position: absolute;
     color: white;
     background-color: blue;
@@ -142,12 +148,12 @@
     min-width: 4rem;
 }
 
-.submit-button:hover{
+.submitButton:hover{
     background-color: rgb(1, 1, 117);
     transition: 0.5s;
 }
 
-.submit-button:focus {
+.submitButton:focus {
     outline-color: transparent;
     outline-style:solid;
     box-shadow: 0 0 0 4px #05006c;
@@ -157,7 +163,7 @@
 .button:active {
     background-color: rgb(1, 1, 117);
 }
-.submit-button-area{
+.submitButtonArea{
     display: flex;
     justify-content: center;
     align-items: center;
