--- a/src/Components/HeaderTimer/Headertimer.module.scss
+++ b/src/Components/HeaderTimer/Headertimer.module.scss
@@ -18,8 +18,62 @@
 .box .number{
     font-size: 1rem;
     font-weight: 700;
+    text-align: center;
 }
 .box .text{
     display: flex;
     justify-content: center;
+}
+
+@media(max-width: 800px){
+    .box{
+        padding: 0.5rem;
+        border-radius: 0.5rem;
+        box-shadow: 0px 2px 5px rgb(0,0,0,0.2);
+    }
+    .box .number{
+        font-size: 0.5rem;
+        font-weight: 700;
+        text-align: center;
+    }
+    .row{
+        display: flex;
+        flex-direction: row;
+        gap: 0.1rem;
+    }
+    .box .text{
+        display: flex;
+        justify-content: center;
+        font-size: 0.5rem;
+    }
+}
+
+@media(max-width: 400px){
+    .box{
+        display: none;
+        padding: 0.1rem;
+        border-radius: 0.5rem;
+        box-shadow: 0px 2px 5px rgb(0,0,0,0.2);
+    }
+    .box .number{
+        font-size: 0.5rem;
+        font-weight: 700;
+        text-align: center;
+    }
+    .row{
+        display: flex;
+        flex-direction: row;
+        gap: 0.1rem;
+    }
+    .box .text{
+        display: flex;
+        justify-content: center;
+        font-size: 0.5rem;
+    }
+}
+
+@media(max-width: 600px){
+    .box{
+        display: none;
+    }
 }
