--- a/src/Components/About/AboutUsComponent.module.scss
+++ b/src/Components/About/AboutUsComponent.module.scss
@@ -51,7 +51,7 @@
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
-    text-align: start;
+    text-align:justify;
     font-variation-settings: "wdth" 97;
     font-size: 1.3rem;
     color: rgb(53, 49, 49);
