--- a/src/Components/Tracks/Tracks.module.scss
+++ b/src/Components/Tracks/Tracks.module.scss
@@ -2,7 +2,9 @@
     display: flex;
     justify-content: center;
     font-size: clamp(12px,10vw,36px);
-    color: maroon;
+    color: blue;
+    font-family: "Anek Tamil", sans-serif;
+    font-weight: 900;
     font-weight: bolder;
   }
 .container{
