--- a/src/Components/Header/header.module.css
+++ b/src/Components/Header/header.module.css
@@ -35,16 +35,16 @@
   align-items: center;
   justify-content: space-between;
   padding-left: 6rem;
-
-  padding-right: 2rem;
+  padding-right: 6rem;
   background-color: white;
 
 }
 .header_content .nits_logo{
-  width: 300px;
+  width: 10rem;
+  padding-left: 3rem;
 }
 .header_content .main_conference_logo{
-  width: 300px;
+  width: 10rem;
 }
 
 .pathway_extreme_header_info {
@@ -62,6 +62,7 @@
 .header_location{
   display: flex;
   gap: 80px;
+  justify-content: space-between ;
   height: fit-content;
   padding-left: 6rem;
   padding-top: 0;
@@ -111,17 +112,9 @@
   flex-direction: row;
 }
 
-.nits_logo{
-  padding-left: 0.7rem;
-  object-fit: contain;
-  img{
-      width: 6rem;
-      height: 6rem;
-  }
-}
-
-.main_conference_logo{
-  padding-left: 0.8rem;
+.important_logos{
+  display: flex;
+  justify-content: space-between;
 }
 .location_ieee_silchar_subsection_logo{
   padding: 1rem 0 0 3rem;
@@ -159,8 +152,9 @@
 
 .header_logos{
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
+  padding-right: 6rem;
 }
 
 @media(max-width: 980px) {
@@ -172,9 +166,13 @@
   .header_location{
     padding-left: 2rem;
   }
+
 }
 
 @media(max-width: 800px) {
+  .header_counter{
+    display: none;
+  }
   .header_links{
     padding-left: 1.5rem;
     padding-right: 3.3rem;
@@ -205,25 +203,56 @@
   margin-right: 0;
   font-size: 1rem;
 }
+.location_ieee_kolkata_section_logo{
+  display: none;
+}
+.location_ieee_logo{
+  display: none;
 }
 
-@media(max-width: 400px) {
+.location_ieee_silchar_subsection_logo{
+  padding: 1rem 0 0 1rem;
+}
+
+.header_logos{
+  padding-right: 2.7rem;
+}
+}
+
+@media(max-width: 500px) {  
+  
   .header_content {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: left;
+    align-items: flex-start;
     padding-left: 1rem;
     padding-right: 1rem;
     background-color: white;
-  }
+    height: 7rem;
+  } 
   .header_links{
-    padding-left: 0.5rem;
-    padding-right: 1rem;
+    width: fit-content;
     font-size: 0.5rem;
+    text-align: center;
+    padding-left: 2.5rem;
+  }
+  .header_links_section{
+    font-size: 0.5rem;
+    text-align: justify;
   }
   .header_location{
+    padding-top: 1rem;
     padding-left: 1rem;
     padding-right: 1rem;
+  }
+  .location_icon{
+    padding-top: 1.5rem;
+    padding-right: 0.5rem;
+    img{
+      width: 1rem;
+      height: 1.3rem;
+    }
   }
   .pathway_extreme_header_info {
   color: blue;
@@ -232,11 +261,17 @@
   font-weight: 750;
   font-style: normal;
   font-variation-settings: "wdth" 75;
-  line-height: 2rem;
+  /* line-height: 2rem; */
   margin-right: 0;
-  font-size: 1rem;
+  justify-content: center;
+  font-size: 0.9rem;
+  text-align:left;
+  line-height: 1.rem;
 }
 .header_logos{
+  display: none;
+}
+.important_logos{
   display: none;
 }
 .header_location_data{
@@ -244,20 +279,21 @@
   padding-right: 0.5rem;
 }
 
-.nits_logo{
+/* .nits_logo{
   padding-left: 0.5rem;
   object-fit: contain;
   img{
       width: 6rem;
       height: 6rem;
   }
-}
+} */
 
-.main_conference_logo{
-  padding-left: 0.8rem;
+  .main_conference_logo{
+  
+    padding-left: 0.8rem;
+  }
 }
-}
-
+/* 
 @media(max-width: 600px){
   .header_links{
     padding-left: 0.4rem;
@@ -271,4 +307,4 @@
   .location_ieee_logo{
     display:none; 
   }
-  }
+  } */
