--- a/src/Components/HeaderTimer/Headertimer.module.scss
+++ b/src/Components/HeaderTimer/Headertimer.module.scss
@@ -25,8 +25,9 @@
     justify-content: center;
 }
 
-@media(max-width: 800px){
+@media(max-width: 1024px){
     .box{
+        display: none;
         padding: 0.5rem;
         border-radius: 0.5rem;
         box-shadow: 0px 2px 5px rgb(0,0,0,0.2);
