--- a/src/Components/Navbar/Navbar.module.scss
+++ b/src/Components/Navbar/Navbar.module.scss
@@ -113,7 +113,7 @@
       .navItem {
         text-align: center;
         padding: 15px;
-        border-top: 1px solid #f1f1f1;
+        // border-top: 1px solid #f1f1f1;
       }
       .dropdownContent {
         position: relative;
