--- a/src/Components/Navbar/Navbar.module.scss
+++ b/src/Components/Navbar/Navbar.module.scss
@@ -117,6 +117,7 @@
         // border-top: 1px solid #f1f1f1;
       }
       .dropdownContent {
+        z-index:10000;
         position: relative;
         box-shadow: none;
         li {
