--- a/src/Components/SubLine/SubLineComponent.module.scss
+++ b/src/Components/SubLine/SubLineComponent.module.scss
@@ -3,10 +3,12 @@
   overflow: hidden;
   white-space: nowrap;
   box-sizing: border-box;
+  padding: 0 0 0 ;
+  padding:.15rem;
 }
 
 .container div{
-  padding: 0 0 0 25rem;
+  padding: 0 0 0 5rem;
 }
 .pathway_extreme_header_info {
     color: rgb(1, 13, 255);
@@ -18,7 +20,8 @@
     /* line-height: 2.2rem; */
     margin-right: 0;
     margin-left: 0;
-    font-size: 2rem;
+    padding: 0%;
+    // font-size: 2rem;
   }
 
   
