updated manuscript submission link and text

--- a/src/Components/Tracks/Tracks.module.scss
+++ b/src/Components/Tracks/Tracks.module.scss
@@ -6,6 +6,7 @@
     font-family: "Anek Tamil", sans-serif;
     font-weight: 900;
     font-weight: bolder;
+    padding-bottom: 2rem;
   }
 .container{
     display: grid;
