--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -1,13 +1,25 @@
 .footer{
     display: flex;
-    justify-content: center;
+    justify-content:space-between;
     align-items: center;
     background-color: rgb(15, 151, 15);
-    height: 12vh;
+    height: 15vh;
     width: 100%;
+    padding-bottom: 0.7rem;
 }
 
 .copyright-text{
+    padding-left: 2rem;
     color: white;
     font-weight: 600;
+}
+
+.counterText{
+    color: white;
+    font-weight: 600;
+}
+
+.counter{
+    padding-right: 2rem;
+    
 }
