--- a/src/Pages/Sponsorship.module.scss
+++ b/src/Pages/Sponsorship.module.scss
@@ -1,7 +1,8 @@
 .sponsorship{
     
-    padding-left: 100px;
-    padding-right: 100px;
+    padding-left: 400px;
+    padding-right: 400px;
+    padding-bottom: 10px;
     img{
         object-fit:contain;
     }
