--- a/src/Pages/Registration.module.scss
+++ b/src/Pages/Registration.module.scss
@@ -3,6 +3,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+     
+    padding-left: 400px;
+    padding-right: 400px;
     img{
         object-fit:contain;
     }
