--- a/src/Components/Navbar/Navbar.module.scss
+++ b/src/Components/Navbar/Navbar.module.scss
@@ -6,6 +6,7 @@
 
   font-family: Arial, sans-serif;
   font-size: 14px;
+
   .topBar {
     width: 100%;
     display: flex;
@@ -14,26 +15,8 @@
     padding: 0rem;
     background-color: white;
 
-    .logos {
-      display: flex;
-      gap: 2rem;
-    }
-
-    .rightLogos {
-      display: flex;
-      gap: 2rem;
-    }
-
-    .logo {
-      height: 5.5rem;
-     
-      
-      margin-right: 10px;
-    }
-
     .hamburger {
       display: none;
-      
       background: none;
       border: none;
       cursor: pointer;
@@ -41,17 +24,16 @@
   }
 
   .navItems {
-    padding-top: .7rem;
-    padding-bottom: .7rem;
+    padding-top: 0.7rem;
+    padding-bottom: 0.7rem;
     display: flex;
     justify-content: center;
-    justify-content: space-around;
     list-style-type: none;
     padding-left: 0;
     margin-top: 0;
-    flex-wrap: wrap;
+    flex-wrap: wrap; /* Allow wrapping on smaller screens */
     color: #f9f9f9;
-    
+
     &.showMenu {
       display: flex;
     }
@@ -77,7 +59,7 @@
         color: rgb(0, 0, 0);
         background-color: #f9f9f9;
         min-width: 200px;
-        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
         z-index: 1000;
         li {
           padding: 12px 16px;
@@ -94,19 +76,10 @@
     .topBar {
       .hamburger {
         display: block;
-        z-index:10000;
+        z-index: 10000;
       }
-      .logos,
-      .rightLogos {
+      .logos, .rightLogos {
         display: none;
-      }
-    }
-    .logos, .rightLogos {
-      img {
-        display: none; // Hide all logos initially
-      }
-      img:nth-child(-n+2) {
-        display: inline;
       }
     }
 
@@ -117,10 +90,9 @@
       .navItem {
         text-align: center;
         padding: 15px;
-        // border-top: 1px solid #f1f1f1;
       }
       .dropdownContent {
-        z-index:10000;
+        z-index: 10000;
         position: relative;
         box-shadow: none;
         li {
@@ -129,5 +101,11 @@
       }
     }
   }
-}
 
+  @media (min-width: 981px) {
+    .navItems {
+      flex-wrap: nowrap; /* Ensure no wrapping after 980px */
+      font-size: 0.875rem; /* Smaller text size for larger screens (14px) */
+    }
+  }
+}
