updated sponsor logos , special section emails

--- a/src/Pages/Specialsess.module.scss
+++ b/src/Pages/Specialsess.module.scss
@@ -16,6 +16,9 @@
     font-size: 1.3rem;
     line-height: 2.5rem;
     padding-left: 3rem;
+    .gmail{
+      color: blue;
+    }
 }
 
 .submitDigestText{
