--- a/src/Pages/CallForPaper.module.css
+++ b/src/Pages/CallForPaper.module.css
@@ -1,11 +1,15 @@
 .header{
   text-align: center;
   font-family: "Anek Tamil", sans-serif;
-  font-weight: 900;
+  
   font-style: normal;
   font-variation-settings: "wdth" 97;
   color: blue;
-  font-size: 40px;
+  font-family: Eina01,sans-serif;
+  font-size: 2rem;
+  font-weight: 800;
+  justify-content: center;
+
 }
 .submitButton{
   position: absolute;
