--- a/src/Pages/Brochure.module.scss
+++ b/src/Pages/Brochure.module.scss
@@ -1,8 +1,14 @@
 .brochure{
     
-    padding-left: 400px;
-    padding-right: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    left:0vw;
+    margin-bottom: 2rem;
     img{
         object-fit:contain;
+        // min-height: 100%;
+        max-width: 50vw;
     }
 }
