--- a/src/Pages/Sponsorship.module.scss
+++ b/src/Pages/Sponsorship.module.scss
@@ -3,11 +3,12 @@
     // padding-left: 400px;
     // padding-right: 400px;
     // padding-bottom: 10px;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
-    left:-5vw;
+    left:0vw;
     img{
         object-fit:contain;
         // min-height: 100%;
