add one front page

--- a/src/Components/ForAuthors/ImportantDates.module.scss
+++ b/src/Components/ForAuthors/ImportantDates.module.scss
@@ -28,7 +28,7 @@
   padding-left: 2rem;
   display: flex;
   justify-content: center;
-  align-items: start;
+  align-items:flex-start;
   flex-direction: column;
   height: 10vh;
   min-height: 7rem;
