--- a/src/Components/ForAuthors/CameraReadySumb.module.scss
+++ b/src/Components/ForAuthors/CameraReadySumb.module.scss
@@ -21,7 +21,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: start;
+  align-items: flex-start; 
   margin: 2rem 8rem 1rem;
 }
 
